--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@daihy8759/NeteaseCloudMusicApi",
-    "version": "1.0.0",
+    "name": "@daihy8759/netease-cloud-music-api",
+    "version": "1.0.1",
     "main": "lib/index.js",
     "module": "esm/index.js",
     "license": "MIT",
@@ -31,15 +31,16 @@
         "axios": "^0.21.1",
         "md5": "^2.3.0",
         "music-metadata": "^7.7.0",
-        "pac-proxy-agent": "^4.1.0",
         "qrcode": "^1.4.4",
         "tunnel": "^0.0.6"
     },
     "devDependencies": {
+        "@types/crypto-js": "^4.0.1",
         "@types/md5": "^2.3.0",
         "@types/node": "^14.14.27",
         "@types/tunnel": "^0.0.1",
         "prettier": "^2.2.1",
+        "tslib": "^2.1.0",
         "typescript": "^4.1.3"
     },
     "peerDependencies": {}
