--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "devDependencies": {
         "@types/crypto-js": "^4.0.1",
         "@types/md5": "^2.3.0",
+        "@types/mocha": "^8.2.0",
         "@types/node": "^14.14.27",
+        "@types/qrcode": "^1.4.0",
         "@types/tunnel": "^0.0.1",
+        "chai": "^4.3.0",
+        "mocha": "^8.3.0",
         "prettier": "^2.2.1",
         "tslib": "^2.1.0",
         "typescript": "^4.1.3"
